--- a/Main.Master
+++ b/Main.Master
@@ -39,22 +39,16 @@
         }
 
 
-        /* md - Medium devices (tablets, 768px and up) */
-        @media (min-width: 768px) and (max-width: 991.98px) {
-            .tableArea {
-                background-color: pink;
-            }
-        }
 
         /* lg - Large devices (desktops, 992px and up) */
-        @media (min-width: 992px) and (max-width: 1399.98px) {
+        @media (max-width: 1281.98px) {
             .tableArea {
                 background-color: orange;
             }
         }
 
         /* xl - Extra large devices (large desktops, 1200px and up) */
-        @media (min-width: 1440px) {
+        @media (min-width: 1282px) {
             .tableArea {
                 background-color: blue;
             }
