--- a/Main.Master
+++ b/Main.Master
@@ -130,18 +130,18 @@
                 </div>
                 <div runat="server" class="col-10 TableNameArea">
                     <span class="TableName">無人機管理</span>
-                    <asp:Button ID="LogoutBtn" runat="server" Text="登出" />
+                    <asp:Button ID="LogoutBtn" runat="server" Text="登出" OnClick="LogoutBtn_Click"/>
                 </div>
             </div>
             <div class="row secondArea">
                 <div class="col-2 titles">
                     <div class="row titlePadding">
-                        <div class="titleArea col-12"><a class="tableLink" href="#">無人機管理</a></div>
+                        <div class="titleArea col-12"><a class="tableLink" href="Drone_Detail.aspx">無人機管理</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="#">無人機維修紀錄</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="#">客戶資料管理</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="#">電池管理</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="#">無人機出勤紀錄</a></div>
-                        <div class="titleArea col-12"><a class="tableLink" href="#">使用者管理</a></div>
+                        <div class="titleArea col-12"><a class="tableLink" href="User_Account.aspx">使用者管理</a></div>
                     </div>
                 </div>
                 <div class="col-10 tableArea">
