--- a/Main.Master
+++ b/Main.Master
@@ -88,6 +88,8 @@
             text-align: center;
         }
 
+
+        /*------登出按鈕 + SVG的CSS樣式------*/
         .logout-btn{
             border:1px solid #A8D8B9;
         }
@@ -111,13 +113,36 @@
             transition:.5s;
             display:inline;
         }
-
+        /*------登出按鈕 + SVG的CSS樣式------*/
         
 
-        .svgFill{
+       /* .svgFill{
             fill:rgb(40,167,69);
             
+        }*/
+
+
+
+        /*-----表格共用CSS樣式-----*/
+        .ToolArea {
+            height: 35px;
         }
+
+        .TableListArea {
+            width: 95%;
+            background-color: white;
+            border-radius: 10px;
+            padding: 2% 3%;
+        }
+
+        .ToolMagin {
+            margin-left: 5px;
+        }
+
+        td{
+            padding:10px!important;
+        }
+        /*-----表格共用CSS樣式-----*/
 
 
 
@@ -160,7 +185,7 @@
                     <img class="LogoImg" src="Imgs/news20171201_001.png" />
                 </div>
                 <div runat="server" class="col-10 TableNameArea">
-                    <span class="TableName">無人機管理</span>
+                    <span class="TableName" runat="server" id="TableName"></span>
                     <button class="btn btn-outline-success  logout-btn" runat="server" id="LogoutBtn" onserverclick="LogoutBtn_Click">
                         
                         登出
