權限功能改寫

--- a/Main.Master
+++ b/Main.Master
@@ -237,16 +237,14 @@
 
     <script>
         $(document).ready(function () {
-            let Sid = $("#ContentPlaceHolder1_HiddenSid").text();
-            
             $.ajax({
                 method: "POST",
                 url: "API/GetUserLevel.ashx",
                 type: "JSON",
-                data: { Sid: Sid }
+                /*data: { Sid: Sid }*/
             }).done(function (responseData) {
-
-                if (responseData == 2) {
+                
+                if (responseData["AccountLevel"] == 2) {
                     $(".BtnDel").css("visibility","visible");
                 } else {
                     $(".BtnDel").css("visibility", "hidden");
