--- a/Main.Master
+++ b/Main.Master
@@ -213,7 +213,7 @@
                         <div class="titleArea col-12"><a class="tableLink" href="#">無人機維修紀錄</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="Customer_Detail.aspx">客戶資料管理</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="#">電池管理</a></div>
-                        <div class="titleArea col-12"><a class="tableLink" href="#">無人機出勤紀錄</a></div>
+                        <div class="titleArea col-12"><a class="tableLink" href="Destination.aspx">無人機出勤紀錄</a></div>
                         <div class="titleArea col-12"><a class="tableLink" href="User_Account.aspx">使用者管理</a></div>
                     </div>
                 </div>
